# BookFiler-Lib-image-to-hOCR

./: CMakeLists.txt
include/BookFiler-Lib-image-to-hOCR/: Interface.hpp
src/core/: Ocr.cpp  Ocr.hpp  OcrApplication.cpp  OcrApplication.hpp  OcrMonitor.cpp  OcrMonitor.hpp  config.hpp
src_example/example00/: CMakeLists.txt  main.cpp
